--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
+    "classnames": "^2.5.1",
+    "date-fns": "^3.4.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
-    "uuid": "^9.0.1",
-    "date-fns": "^3.4.0",
-    "classnames": "^2.5.1"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
